# warrah

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  lib.rs
.github/workflows/: release.yml  tests.yml
benches/: comment_remover.rs  comment_remover_large_file.rs  comment_remover_single_line.rs  detect_language.rs  integration.rs  integration_call_function.rs  multi_line_comment_remover.rs
benches/results/: README.md
docs/: development.md  languages.md  release.md
src/: README.md  lib.rs  main.rs
src/comment_remover/: comment_remover.rs  mod.rs  multi_line.rs  remove_all_comments.rs  single_line.rs
src/languages/: comment_config.rs  docs_parse.rs  error.rs  generated.rs  language_map.rs  language_maps.rs  map_languages.rs  mod.rs
src/process/: comments_remover.rs  file_path.rs  file_size.rs  mod.rs
src/test_utils/: fixture.rs  mod.rs
tests/: integration_test.rs
tests/common/: mod.rs
tests/fixtures/: languages.md
tests/fixtures/javascript/: integration_bench.expected.js  main_success.expected.js  main_success.js  process_from_file_path.expected.js  process_from_file_path_uppercase.JS  process_from_file_path_uppercase.expected.JS  remove_comments.expected.js  remove_comments.js  remove_comments_uppercase.expected.JS
tests/fixtures/javascript/benches/: integration_bench.js
tests/fixtures/makefile/process_from_file_path/: Makefile  expected.Makefile
tests/fixtures/unknown/: process_from_file_path.xyz
tests/python/: single_line_comment_remover.py  test_single_line_comment_remover.py
