[package]
name = "warrah"
version = "0.1.0"
edition = "2021"
description = "Warrah: A command-line utility and Rust library that lazily removes code comments from a text file, supporting 70+ programming languages."
license = "Unlicense"
repository = "https://github.com/evgenyneu/warrah"
readme = "README.md"
homepage = "https://github.com/evgenyneu/warrah"
documentation = "https://docs.rs/warrah"
keywords = ["text", "CLI", "LLM"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]


[dev-dependencies]
assert_cmd = "2.0"
expectrl = "0.7"

[lib]
name = "warrah"
path = "src/lib.rs"

[[bin]]
name = "warrah"
path = "src/main.rs"

[profile.release]
# Settings to make release binary smaller: https://github.com/johnthagen/min-sized-rust
strip = true # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true # Enable Link Time Optimization
codegen-units = 1 # Reduce Parallel Code Generation
