[package]
name = "warrah"
version = "0.1.0"
edition = "2021"
description = "Warrah: A command-line utility and Rust library that lazily removes code comments from a text file, supporting 70+ programming languages."
license = "Unlicense"
repository = "https://github.com/evgenyneu/warrah"
readme = "README.md"
homepage = "https://github.com/evgenyneu/warrah"
documentation = "https://docs.rs/warrah"
keywords = ["text", "CLI", "LLM"]
categories = ["command-line-utilities", "text-processing"]

[workspace]
members = [
    ".",
    "build"
]

[dependencies]
lazy_static = "1.4"

[build-dependencies]
build-script = { path = "build" }

[dev-dependencies]

[lib]
name = "warrah"
path = "src/lib.rs"

[[bin]]
name = "warrah"
path = "src/main.rs"
