[package]
name = "warrah"
version = "0.1.0"
edition = "2021"
description = "Warrah: A command-line utility and Rust library that sloppily removes code comments from a text file, supporting 60+ programming languages."
license = "Unlicense"
repository = "https://github.com/evgenyneu/warrah"
readme = "README.md"
homepage = "https://github.com/evgenyneu/warrah"
documentation = "https://docs.rs/warrah"
keywords = ["text", "CLI", "LLM"]
categories = ["command-line-utilities", "text-processing"]

[workspace]
members = [
    ".",
    "build"
]

[dependencies]
memchr = "2.7.4"

[build-dependencies]
build-script = { path = "build" }

[package.metadata]
exclude = ["build"]

[dev-dependencies]
criterion = "0.5.1"

[lib]
name = "warrah"
path = "src/lib.rs"

[[bin]]
name = "warrah"
path = "src/main.rs"

[[bench]]
name = "integration"
harness = false


[[bench]]
name = "integration_call_function"
harness = false


[[bench]]
name = "comment_remover"
harness = false

[[bench]]
name = "comment_remover_large_file"
harness = false


[[bench]]
name = "comment_remover_single_line"
harness = false

[[bench]]
name = "detect_language"
harness = false
